# logger

./: .gitignore  .pre-commit-config.yaml  .pylintrc  BREAKING_CHANGES.md  BUILD_INSTRUCTIONS.md  BUILD_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSIONING.md  build-report.md  emoji-mappings.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-npm.yml  publish-python.yml  release.yml  version.yml
clients/python/: .flake8  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  setup.py
clients/python/artissist_logger/: __init__.py  context.py  emoji.py  factory.py  generated_types.py  logger.py  types.py
clients/python/mosaic_logger/: __init__.py  context.py  emoji.py  factory.py  logger.py  types.py
clients/typescript/: README.md  eslint.config.mjs  jest.setup.js  package-lock.json  package.json  rollup.config.js  test_null_handling.mjs  tsconfig.json
clients/typescript/src/: context.ts  emoji.ts  factory.browser.ts  factory.ts  generated-types.ts  index.browser.ts  index.ts  logger.ts  types.ts
examples/: complete-demo.ts
examples/agent/: strands-agent-example.py
examples/backend/: fastapi-example.py
examples/frontend/: next-js-example.tsx
examples/infrastructure/: aws-cdk-example.ts
scripts/: build.sh  check-license-headers.sh  fix-python.sh  generate-clients.sh  generate-python.py  generate-typescript.js  install-python.sh  lint-all.sh  lint-python.sh  lint-typescript.sh  sync-versions.sh  test-python.sh  validate-models.sh
smithy/: build.gradle.kts  gradle.properties  settings.gradle.kts  smithy-build.json
smithy/gradle/: build.gradle.kts  gradle.properties  settings.gradle.kts
smithy/models/: .smithy-build.json  common.smithy  extensions.smithy  logging-service.smithy  structures.smithy
(+15 files in other folders)
